# mcp_openapi-spec

./: .claude-typesafe.json  .dockerignore  .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  issues.md  main.py  main.ts  openapi-chroma.service  package.json  pyproject.toml  tsconfig.base.json  tsconfig.json
scripts/: debugStore.ts  postmanToOpenapi.ts  proxmoxEnrich.ts  reconstructSpec.ts  split_msgraph_devices.py
specs/: darktrace.yaml
src/: chunker.py  chunker.ts  config.ts  httpServer.ts  index.ts  mcpServer.ts  mcp_server.py  parser.py  parser.ts  retriever.py  retriever.ts  store.py  store.ts  swaggerUi.ts
src/core/: chunker.ts  parser.ts  retriever.ts  store.ts
src/server/: httpServer.ts  mcpServer.ts
types/: config.ts  index.ts  openapi.ts
ui/: index.html  package.json  tsconfig.json  vite.config.ts
ui/src/: main.tsx  swagger-ui-react.d.ts
ui/src/components/: SearchBar.tsx  SearchResults.tsx  SpecSelector.tsx  SwaggerView.tsx
ui/src/routes/: HomeRoute.tsx
ui/src/store/: store.ts  types.ts
ui/src/styles/: globals.css
